--- a/src/gui/TataiTheme.css
+++ b/src/gui/TataiTheme.css
@@ -35,6 +35,11 @@
 	-fx-text-fill: white;
  	-fx-background-color: #cc0404;
 }
+.button:hover {
+    -fx-scale-x: 1.2;
+    -fx-scale-y: 1.2;
+    -fx-scale-z: 1.2;
+}
 .table-row-cell:empty {
     -fx-background-color: white;
 }
