--- a/src/gui/MainWindow.fxml
+++ b/src/gui/MainWindow.fxml
@@ -34,6 +34,12 @@
             <DropShadow blurType="ONE_PASS_BOX" />
          </effect>
       </Text>
-      <JFXButton fx:id="_mainMenuTutorial" buttonType="RAISED" onAction="#handleTutorialClick" prefHeight="50.0" prefWidth="100.0" text="Tutorial" textFill="WHITE" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="TOP" />
+      <JFXButton fx:id="_mainMenuTutorial" buttonType="RAISED" onAction="#handleTutorialClick" prefHeight="20.0" prefWidth="20.0" text="?" textFill="WHITE" GridPane.columnIndex="2" GridPane.halignment="RIGHT" GridPane.valignment="TOP">
+         <font>
+            <Font size="15.0" />
+         </font>
+         <GridPane.margin>
+            <Insets right="10.0" top="10.0" />
+         </GridPane.margin></JFXButton>
    </children>
 </GridPane>
