--- a/src/gui/TataiTheme.css
+++ b/src/gui/TataiTheme.css
@@ -34,6 +34,7 @@
 .button{
 	-fx-text-fill: white;
  	-fx-background-color: #cc0404;
+ 	-fx-cursor: hand;
 }
 .button:hover {
     -fx-scale-x: 1.2;
