--- a/src/gui/TutorialWindow.fxml
+++ b/src/gui/TutorialWindow.fxml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import com.jfoenix.controls.JFXButton?>
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.effect.DropShadow?>
@@ -51,31 +51,48 @@
         <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="546.0" minWidth="10.0" prefWidth="185.0" />
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="546.0" minWidth="10.0" prefWidth="408.0" />
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="294.0" minWidth="10.0" prefWidth="22.0" />
         </columnConstraints>
         <rowConstraints>
-            <RowConstraints maxHeight="283.0" minHeight="10.0" prefHeight="13.0" vgrow="SOMETIMES" />
           <RowConstraints maxHeight="286.0" minHeight="10.0" prefHeight="248.0" vgrow="SOMETIMES" />
           <RowConstraints maxHeight="133.0" minHeight="10.0" prefHeight="88.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <GridPane GridPane.columnIndex="1" GridPane.rowIndex="2">
+            <GridPane GridPane.columnIndex="1" GridPane.rowIndex="1">
               <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" maxWidth="286.0" minWidth="10.0" prefWidth="265.0" />
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="174.0" minWidth="10.0" prefWidth="125.0" />
+                <ColumnConstraints hgrow="SOMETIMES" />
               </columnConstraints>
               <rowConstraints>
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <Button fx:id="_nextButton" mnemonicParsing="false" onAction="#handleNextClick" prefHeight="50.0" prefWidth="100.0" text="Next" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
+                  <JFXButton fx:id="_nextButton" buttonType="RAISED" onAction="#handleNextClick" prefHeight="50.0" prefWidth="100.0" text="Next" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.valignment="BOTTOM">
+                     <GridPane.margin>
+                        <Insets bottom="20.0" right="20.0" />
+                     </GridPane.margin></JFXButton>
                </children>
             </GridPane>
-            <ImageView fx:id="_imageView" fitHeight="222.0" fitWidth="349.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
+            <ImageView fx:id="_imageView" fitHeight="222.0" fitWidth="349.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
                <effect>
                   <DropShadow color="WHITE" height="5.0" radius="2.0" spread="1.0" width="5.0" />
                </effect></ImageView>
-            <TextArea fx:id="_textArea" prefHeight="200.0" prefWidth="200.0" styleClass="root" GridPane.rowIndex="1" />
+            <TextArea fx:id="_textArea" prefHeight="200.0" prefWidth="200.0" styleClass="root" />
+            <GridPane GridPane.rowIndex="1">
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="79.0" minWidth="10.0" prefWidth="57.0" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+               <children>
+                  <JFXButton fx:id="_backButton" buttonType="RAISED" onAction="#handleBackClick" prefHeight="50.0" prefWidth="100.0" text="Back" GridPane.halignment="LEFT" GridPane.valignment="BOTTOM">
+                     <GridPane.margin>
+                        <Insets bottom="20.0" left="20.0" />
+                     </GridPane.margin>
+                  </JFXButton>
+               </children>
+            </GridPane>
          </children>
       </GridPane>
       <Label fx:id="_titleLabel" style="-fx-text-alignment: center;" styleClass="root" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="TOP">
