--- a/src/gui/TeacherInputWindow.fxml
+++ b/src/gui/TeacherInputWindow.fxml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXButton?>
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" stylesheets="@TataiTheme.css" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.111">
+<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" stylesheets="@TataiTheme.css" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.TeacherInputWindowController">
   <columnConstraints>
     <ColumnConstraints hgrow="SOMETIMES" maxWidth="142.0" minWidth="0.0" prefWidth="51.0" />
     <ColumnConstraints hgrow="SOMETIMES" maxWidth="550.0" minWidth="10.0" prefWidth="506.0" />
@@ -84,12 +85,12 @@
                   <Font size="36.0" />
                </font>
             </JFXButton>
-            <JFXButton buttonType="RAISED" onAction="#handleDeleteClick" prefHeight="71.0" prefWidth="95.0" text="Clear" GridPane.columnIndex="6" GridPane.halignment="RIGHT">
+            <JFXButton fx:id="_clearButton" buttonType="RAISED" prefHeight="71.0" prefWidth="95.0" text="Clear" GridPane.columnIndex="6" GridPane.halignment="RIGHT">
                <font>
                   <Font size="20.0" />
                </font>
             </JFXButton>
-            <JFXButton fx:id="_recordButton" buttonType="RAISED" onAction="#handleRecordClick" prefHeight="71.0" prefWidth="95.0" text="Enter" GridPane.columnIndex="6" GridPane.halignment="RIGHT" GridPane.rowIndex="1">
+            <JFXButton fx:id="_enterButton" buttonType="RAISED" prefHeight="71.0" prefWidth="95.0" text="Enter" GridPane.columnIndex="6" GridPane.halignment="RIGHT" GridPane.rowIndex="1">
                <font>
                   <Font size="16.0" />
                </font>
@@ -109,32 +110,37 @@
           <RowConstraints maxHeight="24.0" minHeight="10.0" prefHeight="11.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <JFXButton fx:id="_" buttonType="RAISED" prefHeight="80.0" prefWidth="80.0" text="+" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
+            <JFXButton fx:id="_plus" buttonType="RAISED" prefHeight="80.0" prefWidth="80.0" text="+" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
                <font>
                   <Font size="36.0" />
                </font>
             </JFXButton>
-            <JFXButton buttonType="RAISED" prefHeight="80.0" prefWidth="80.0" text="-" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
+            <JFXButton fx:id="_minus" buttonType="RAISED" prefHeight="80.0" prefWidth="80.0" text="-" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
                <font>
                   <Font size="36.0" />
                </font>
             </JFXButton>
-            <JFXButton buttonType="RAISED" prefHeight="80.0" prefWidth="80.0" text="x" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
+            <JFXButton fx:id="_times" buttonType="RAISED" prefHeight="80.0" prefWidth="80.0" text="x" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
                <font>
                   <Font size="36.0" />
                </font>
             </JFXButton>
-            <JFXButton buttonType="RAISED" prefHeight="80.0" prefWidth="80.0" text="÷" GridPane.columnIndex="3" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
+            <JFXButton fx:id="_divide" buttonType="RAISED" prefHeight="80.0" prefWidth="80.0" text="÷" GridPane.columnIndex="3" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
                <font>
                   <Font size="36.0" />
                </font>
             </JFXButton>
          </children>
       </GridPane>
-      <Label textFill="WHITE" GridPane.columnIndex="1" GridPane.halignment="CENTER">
+      <Label fx:id="_inputLabel" textFill="WHITE" GridPane.columnIndex="1" GridPane.halignment="CENTER">
          <font>
             <Font size="70.0" />
          </font>
       </Label>
+      <JFXButton fx:id="_exitButton" buttonType="RAISED" onAction="#handleExitClick" text="X" GridPane.halignment="LEFT" GridPane.valignment="TOP">
+         <GridPane.margin>
+            <Insets left="10.0" top="10.0" />
+         </GridPane.margin>
+      </JFXButton>
    </children>
 </GridPane>
