--- a/src/gui/TeacherInputWindow.fxml
+++ b/src/gui/TeacherInputWindow.fxml
@@ -85,7 +85,7 @@
                   <Font size="36.0" />
                </font>
             </JFXButton>
-            <JFXButton fx:id="_clearButton" buttonType="RAISED" prefHeight="71.0" prefWidth="95.0" text="Clear" GridPane.columnIndex="6" GridPane.halignment="RIGHT">
+            <JFXButton fx:id="_clearButton" buttonType="RAISED" onAction="#handleClearClick" prefHeight="71.0" prefWidth="95.0" text="Clear" GridPane.columnIndex="6" GridPane.halignment="RIGHT">
                <font>
                   <Font size="20.0" />
                </font>
@@ -110,22 +110,22 @@
           <RowConstraints maxHeight="24.0" minHeight="10.0" prefHeight="11.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <JFXButton fx:id="_plus" buttonType="RAISED" prefHeight="80.0" prefWidth="80.0" text="+" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
+            <JFXButton fx:id="_plus" buttonType="RAISED" onAction="#handlePlusClick" prefHeight="80.0" prefWidth="80.0" text="+" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
                <font>
                   <Font size="36.0" />
                </font>
             </JFXButton>
-            <JFXButton fx:id="_minus" buttonType="RAISED" prefHeight="80.0" prefWidth="80.0" text="-" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
+            <JFXButton fx:id="_minus" buttonType="RAISED" onAction="#handleMinusClick" prefHeight="80.0" prefWidth="80.0" text="-" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
                <font>
                   <Font size="36.0" />
                </font>
             </JFXButton>
-            <JFXButton fx:id="_times" buttonType="RAISED" prefHeight="80.0" prefWidth="80.0" text="x" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
+            <JFXButton fx:id="_times" buttonType="RAISED" onAction="#handleTimesClick" prefHeight="80.0" prefWidth="80.0" text="x" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
                <font>
                   <Font size="36.0" />
                </font>
             </JFXButton>
-            <JFXButton fx:id="_divide" buttonType="RAISED" prefHeight="80.0" prefWidth="80.0" text="÷" GridPane.columnIndex="3" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
+            <JFXButton fx:id="_divide" buttonType="RAISED" onAction="#handleDivideClick" prefHeight="80.0" prefWidth="80.0" text="÷" GridPane.columnIndex="3" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
                <font>
                   <Font size="36.0" />
                </font>
@@ -142,5 +142,6 @@
             <Insets left="10.0" top="10.0" />
          </GridPane.margin>
       </JFXButton>
+      <Label fx:id="_warningLabel" text="Answers must evaluate to between 1 - 99 with no decimals." textFill="#d00707" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="BOTTOM" />
    </children>
 </GridPane>
