--- a/src/gui/PracticeWindow.fxml
+++ b/src/gui/PracticeWindow.fxml
@@ -13,8 +13,8 @@
     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
   </columnConstraints>
   <rowConstraints>
-      <RowConstraints maxHeight="198.0" minHeight="10.0" prefHeight="183.0" vgrow="SOMETIMES" />
-    <RowConstraints maxHeight="364.0" minHeight="10.0" prefHeight="217.0" vgrow="SOMETIMES" />
+      <RowConstraints vgrow="SOMETIMES" />
+    <RowConstraints vgrow="SOMETIMES" />
   </rowConstraints>
    <children>
       <GridPane GridPane.rowIndex="1">
@@ -25,7 +25,7 @@
         </columnConstraints>
         <rowConstraints>
           <RowConstraints maxHeight="330.0" minHeight="10.0" prefHeight="181.0" vgrow="SOMETIMES" />
-          <RowConstraints maxHeight="172.0" minHeight="10.0" prefHeight="36.0" vgrow="SOMETIMES" />
+          <RowConstraints vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
             <GridPane GridPane.columnIndex="1">
@@ -109,13 +109,13 @@
       </GridPane>
       <GridPane>
         <columnConstraints>
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="72.0" />
+            <ColumnConstraints hgrow="SOMETIMES" />
           <ColumnConstraints hgrow="NEVER" maxWidth="527.0" minWidth="10.0" prefWidth="476.0" />
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="73.0" />
         </columnConstraints>
         <rowConstraints>
-          <RowConstraints maxHeight="43.0" minHeight="10.0" prefHeight="20.0" vgrow="SOMETIMES" />
-          <RowConstraints maxHeight="87.0" minHeight="10.0" prefHeight="80.0" vgrow="SOMETIMES" />
+          <RowConstraints vgrow="SOMETIMES" />
+          <RowConstraints vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
             <Label fx:id="_inputLabel" textFill="WHITE" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1">
@@ -123,12 +123,12 @@
                   <Font size="80.0" />
                </font>
             </Label>
+            <JFXButton fx:id="_exitButton" onAction="#handleExitClick" text="X" GridPane.halignment="LEFT" GridPane.valignment="TOP">
+               <GridPane.margin>
+                  <Insets left="10.0" top="10.0" />
+               </GridPane.margin>
+            </JFXButton>
          </children>
       </GridPane>
-      <JFXButton fx:id="_exitButton" onAction="#handleExitClick" text="X" GridPane.halignment="LEFT" GridPane.valignment="TOP">
-         <GridPane.margin>
-            <Insets left="10.0" top="10.0" />
-         </GridPane.margin>
-      </JFXButton>
    </children>
 </GridPane>
