--- a/src/gui/TeacherInputWindow.fxml
+++ b/src/gui/TeacherInputWindow.fxml
@@ -10,25 +10,25 @@
 
 <GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" stylesheets="@TataiTheme.css" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.TeacherInputWindowController">
   <columnConstraints>
-    <ColumnConstraints hgrow="SOMETIMES" maxWidth="142.0" minWidth="0.0" prefWidth="51.0" />
-    <ColumnConstraints hgrow="SOMETIMES" maxWidth="550.0" minWidth="10.0" prefWidth="506.0" />
+    <ColumnConstraints hgrow="SOMETIMES" />
+    <ColumnConstraints hgrow="SOMETIMES" />
       <ColumnConstraints hgrow="SOMETIMES" maxWidth="182.0" minWidth="0.0" prefWidth="42.0" />
   </columnConstraints>
   <rowConstraints>
-    <RowConstraints maxHeight="144.0" minHeight="10.0" prefHeight="137.0" vgrow="SOMETIMES" />
+    <RowConstraints vgrow="SOMETIMES" />
     <RowConstraints maxHeight="217.0" minHeight="10.0" prefHeight="158.0" vgrow="SOMETIMES" />
-    <RowConstraints maxHeight="126.0" minHeight="10.0" prefHeight="105.0" vgrow="SOMETIMES" />
+    <RowConstraints vgrow="SOMETIMES" />
   </rowConstraints>
    <children>
       <GridPane GridPane.columnIndex="1" GridPane.rowIndex="1">
          <columnConstraints>
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" />
+            <ColumnConstraints hgrow="SOMETIMES" />
+            <ColumnConstraints hgrow="SOMETIMES" />
+            <ColumnConstraints hgrow="SOMETIMES" />
+            <ColumnConstraints hgrow="SOMETIMES" />
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="68.0" minWidth="0.0" prefWidth="0.0" />
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="146.0" minWidth="10.0" prefWidth="115.0" />
+            <ColumnConstraints hgrow="SOMETIMES" />
          </columnConstraints>
          <rowConstraints>
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -39,61 +39,97 @@
                <font>
                   <Font size="36.0" />
                </font>
+               <GridPane.margin>
+                  <Insets bottom="10.0" left="5.0" right="5.0" top="10.0" />
+               </GridPane.margin>
             </JFXButton>
             <JFXButton fx:id="_1" buttonType="RAISED" onAction="#handle1Click" prefHeight="71.0" prefWidth="71.0" text="1" GridPane.columnIndex="1" GridPane.halignment="CENTER">
                <font>
                   <Font size="36.0" />
                </font>
+               <GridPane.margin>
+                  <Insets bottom="10.0" left="5.0" right="5.0" top="10.0" />
+               </GridPane.margin>
             </JFXButton>
             <JFXButton fx:id="_2" buttonType="RAISED" onAction="#handle2Click" prefHeight="71.0" prefWidth="71.0" text="2" GridPane.columnIndex="2" GridPane.halignment="CENTER">
                <font>
                   <Font size="36.0" />
                </font>
+               <GridPane.margin>
+                  <Insets bottom="10.0" left="5.0" right="5.0" top="10.0" />
+               </GridPane.margin>
             </JFXButton>
             <JFXButton fx:id="_3" buttonType="RAISED" onAction="#handle3Click" prefHeight="71.0" prefWidth="71.0" text="3" GridPane.columnIndex="3" GridPane.halignment="CENTER">
                <font>
                   <Font size="36.0" />
                </font>
+               <GridPane.margin>
+                  <Insets bottom="10.0" left="5.0" right="5.0" top="10.0" />
+               </GridPane.margin>
             </JFXButton>
             <JFXButton fx:id="_4" buttonType="RAISED" onAction="#handle4Click" prefHeight="71.0" prefWidth="71.0" text="4" GridPane.columnIndex="4" GridPane.halignment="CENTER">
                <font>
                   <Font size="36.0" />
                </font>
+               <GridPane.margin>
+                  <Insets bottom="10.0" left="5.0" right="5.0" top="10.0" />
+               </GridPane.margin>
             </JFXButton>
             <JFXButton fx:id="_5" buttonType="RAISED" onAction="#handle5Click" prefHeight="71.0" prefWidth="71.0" text="5" GridPane.halignment="CENTER" GridPane.rowIndex="1">
                <font>
                   <Font size="36.0" />
                </font>
+               <GridPane.margin>
+                  <Insets bottom="10.0" left="5.0" right="5.0" top="10.0" />
+               </GridPane.margin>
             </JFXButton>
             <JFXButton fx:id="_6" buttonType="RAISED" onAction="#handle6Click" prefHeight="71.0" prefWidth="71.0" text="6" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1">
                <font>
                   <Font size="36.0" />
                </font>
+               <GridPane.margin>
+                  <Insets bottom="10.0" left="5.0" right="5.0" top="10.0" />
+               </GridPane.margin>
             </JFXButton>
             <JFXButton fx:id="_7" buttonType="RAISED" onAction="#handle7Click" prefHeight="71.0" prefWidth="71.0" text="7" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="1">
                <font>
                   <Font size="36.0" />
                </font>
+               <GridPane.margin>
+                  <Insets bottom="10.0" left="5.0" right="5.0" top="10.0" />
+               </GridPane.margin>
             </JFXButton>
             <JFXButton fx:id="_8" buttonType="RAISED" onAction="#handle8Click" prefHeight="71.0" prefWidth="71.0" text="8" GridPane.columnIndex="3" GridPane.halignment="CENTER" GridPane.rowIndex="1">
                <font>
                   <Font size="36.0" />
                </font>
+               <GridPane.margin>
+                  <Insets bottom="10.0" left="5.0" right="5.0" top="10.0" />
+               </GridPane.margin>
             </JFXButton>
             <JFXButton fx:id="_9" buttonType="RAISED" onAction="#handle9Click" prefHeight="71.0" prefWidth="71.0" text="9" GridPane.columnIndex="4" GridPane.halignment="CENTER" GridPane.rowIndex="1">
                <font>
                   <Font size="36.0" />
                </font>
+               <GridPane.margin>
+                  <Insets bottom="10.0" left="5.0" right="5.0" top="10.0" />
+               </GridPane.margin>
             </JFXButton>
             <JFXButton fx:id="_clearButton" buttonType="RAISED" onAction="#handleClearClick" prefHeight="71.0" prefWidth="95.0" text="Clear" GridPane.columnIndex="6" GridPane.halignment="RIGHT">
                <font>
                   <Font size="20.0" />
                </font>
+               <GridPane.margin>
+                  <Insets bottom="10.0" left="5.0" right="5.0" top="10.0" />
+               </GridPane.margin>
             </JFXButton>
             <JFXButton fx:id="_enterButton" buttonType="RAISED" onAction="#handleEnterClick" prefHeight="71.0" prefWidth="95.0" text="Enter" GridPane.columnIndex="6" GridPane.halignment="RIGHT" GridPane.rowIndex="1">
                <font>
                   <Font size="16.0" />
                </font>
+               <GridPane.margin>
+                  <Insets bottom="10.0" left="5.0" right="5.0" top="10.0" />
+               </GridPane.margin>
             </JFXButton>
          </children>
       </GridPane>
