--- a/src/gui/CustomListSelectionWindow.fxml
+++ b/src/gui/CustomListSelectionWindow.fxml
@@ -26,7 +26,7 @@
             <Insets left="10.0" top="10.0" />
          </GridPane.margin>
       </JFXButton>
-      <JFXListView fx:id="_list" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+      <JFXListView fx:id="_listView" onMouseClicked="#handleListSelection" GridPane.columnIndex="1" GridPane.rowIndex="1" />
       <Label text="Your Lists" textFill="WHITE" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
          <font>
             <Font size="40.0" />
