--- a/src/gui/UserWindow.fxml
+++ b/src/gui/UserWindow.fxml
@@ -3,6 +3,7 @@
 <?import com.jfoenix.controls.JFXButton?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
+<?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
@@ -29,10 +30,10 @@
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <JFXButton fx:id="_continueButton" onAction="#handleContinueClick" prefHeight="50.0" prefWidth="100.0" text="Continue" GridPane.columnIndex="3" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
-            <JFXButton fx:id="_addButton" onAction="#handleAddClick" prefHeight="50.0" prefWidth="100.0" text="Add" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
-            <JFXButton fx:id="_deleteButton" onAction="#handleDeleteClick" prefHeight="50.0" prefWidth="100.0" text="Delete" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
-            <JFXButton fx:id="_quitButton" onAction="#handleQuitClick" prefHeight="50.0" prefWidth="100.0" text="Quit" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
+            <JFXButton fx:id="_continueButton" buttonType="RAISED" onAction="#handleContinueClick" prefHeight="50.0" prefWidth="100.0" text="Continue" GridPane.columnIndex="3" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
+            <JFXButton fx:id="_addButton" buttonType="RAISED" onAction="#handleAddClick" prefHeight="50.0" prefWidth="100.0" text="Add" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
+            <JFXButton fx:id="_deleteButton" buttonType="RAISED" onAction="#handleDeleteClick" prefHeight="50.0" prefWidth="100.0" text="Delete" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
+            <JFXButton fx:id="_quitButton" buttonType="RAISED" onAction="#handleQuitClick" prefHeight="50.0" prefWidth="100.0" text="Quit" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
          </children>
       </GridPane>
       <GridPane>
@@ -45,15 +46,21 @@
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <Label styleClass="root" text="STUDENTS" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
+            <Label stylesheets="@TataiTheme.css" text="STUDENTS" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
                <font>
                   <Font name="NanumGothic" size="40.0" />
                </font>
+               <effect>
+                  <DropShadow blurType="ONE_PASS_BOX" />
+               </effect>
             </Label>
-            <Label styleClass="root" text="TEACHERS" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
+            <Label stylesheets="@TataiTheme.css" text="TEACHERS" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
                <font>
                   <Font name="NanumGothic" size="40.0" />
                </font>
+               <effect>
+                  <DropShadow blurType="ONE_PASS_BOX" />
+               </effect>
             </Label>
          </children>
       </GridPane>
