--- a/src/gui/TataiTheme.css
+++ b/src/gui/TataiTheme.css
@@ -70,3 +70,7 @@
 .text-area *.content {
     -fx-background-color: #383838;
 }
+.label {
+	-fx-background-color: transparent;
+	 -fx-text-fill: white;
+}
