--- a/src/gui/CustomListSelectionWindow.fxml
+++ b/src/gui/CustomListSelectionWindow.fxml
@@ -24,7 +24,7 @@
             <Insets left="10.0" top="10.0" />
          </GridPane.margin>
       </JFXButton>
-      <JFXListView fx:id="_listView" onMouseClicked="#handleListSelection" style="-fx-text-fill: black;" GridPane.rowIndex="1">
+      <JFXListView fx:id="_listView" onMouseClicked="#handleListSelection" GridPane.rowIndex="1">
          <GridPane.margin>
             <Insets left="10.0" right="10.0" />
          </GridPane.margin></JFXListView>
