--- a/src/gui/UserWindow.fxml
+++ b/src/gui/UserWindow.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXButton?>
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.effect.DropShadow?>
@@ -53,6 +54,9 @@
                <effect>
                   <DropShadow blurType="ONE_PASS_BOX" />
                </effect>
+               <GridPane.margin>
+                  <Insets />
+               </GridPane.margin>
             </Label>
             <Label stylesheets="@TataiTheme.css" text="TEACHERS" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
                <font>
@@ -61,6 +65,9 @@
                <effect>
                   <DropShadow blurType="ONE_PASS_BOX" />
                </effect>
+               <GridPane.margin>
+                  <Insets />
+               </GridPane.margin>
             </Label>
          </children>
       </GridPane>
@@ -73,8 +80,14 @@
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <ListView fx:id="_userList1" onMouseClicked="#handleListClick" prefHeight="200.0" prefWidth="200.0" />
-            <ListView fx:id="_userList2" onMouseClicked="#handleListClick" prefHeight="200.0" prefWidth="200.0" stylesheets="@TataiTheme.css" GridPane.columnIndex="1" />
+            <ListView fx:id="_userList1" onMouseClicked="#handleListClick" prefHeight="314.0" prefWidth="400.0">
+               <GridPane.margin>
+                  <Insets top="40.0" />
+               </GridPane.margin></ListView>
+            <ListView fx:id="_userList2" onMouseClicked="#handleListClick" prefHeight="200.0" prefWidth="200.0" stylesheets="@TataiTheme.css" GridPane.columnIndex="1">
+               <GridPane.margin>
+                  <Insets top="40.0" />
+               </GridPane.margin></ListView>
          </children>
       </GridPane>
    </children>
